crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__declaration__array.qasm-lex.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: lex_snap
---
id: tests/snippets/reference/declaration/array.qasm
expect-lex: Ok
--- source ---
// lex: ok
// parse: todo
// sema: skip

array[uint[16], 1] x;
array[int[8], 4] x;
array[float[64], 4, 2] x;
array[angle[32], 4, 3, 2] x;
array[bit[8], 2] x;
array[bit[16], 2, 2] x;
array[complex[float[32]], 4] x;
array[bool, 3] x;
array[int[8], 4] x = {1, 2, 3, 4};
array[int[8], 4] x = y;
array[int[8], 2] x = {y, y+y};
array[uint[32], 2, 2] x = {{3, 4}, {2-3, 5*y}};
array[uint[32], 2, 2] x = {z, {2-3, 5*y}};
array[uint[32], 2, 2] x = {2*z, {1, 2}};
array[uint[32], 2, 2] x = y;
--- lexer ---
ok: true
errors: 0
[0] LineComment "// lex: ok" @0..10
[1] Whitespace "\n" @10..11
[2] LineComment "// parse: todo" @11..25
[3] Whitespace "\n" @25..26
[4] LineComment "// sema: skip" @26..39
[5] Whitespace "\n\n" @39..41
[6] Ident "array" @41..46
[7] OpenBracket "[" @46..47
[8] Ident "uint" @47..51
[9] OpenBracket "[" @51..52
[10] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 2 } "16" @52..54
[11] CloseBracket "]" @54..55
[12] Comma "," @55..56
[13] Whitespace " " @56..57
[14] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "1" @57..58
[15] CloseBracket "]" @58..59
[16] Whitespace " " @59..60
[17] Ident "x" @60..61
[18] Semi ";" @61..62
[19] Whitespace "\n" @62..63
[20] Ident "array" @63..68
[21] OpenBracket "[" @68..69
[22] Ident "int" @69..72
[23] OpenBracket "[" @72..73
[24] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "8" @73..74
[25] CloseBracket "]" @74..75
[26] Comma "," @75..76
[27] Whitespace " " @76..77
[28] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "4" @77..78
[29] CloseBracket "]" @78..79
[30] Whitespace " " @79..80
[31] Ident "x" @80..81
[32] Semi ";" @81..82
[33] Whitespace "\n" @82..83
[34] Ident "array" @83..88
[35] OpenBracket "[" @88..89
[36] Ident "float" @89..94
[37] OpenBracket "[" @94..95
[38] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 2 } "64" @95..97
[39] CloseBracket "]" @97..98
[40] Comma "," @98..99
[41] Whitespace " " @99..100
[42] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "4" @100..101
[43] Comma "," @101..102
[44] Whitespace " " @102..103
[45] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @103..104
[46] CloseBracket "]" @104..105
[47] Whitespace " " @105..106
[48] Ident "x" @106..107
[49] Semi ";" @107..108
[50] Whitespace "\n" @108..109
[51] Ident "array" @109..114
[52] OpenBracket "[" @114..115
[53] Ident "angle" @115..120
[54] OpenBracket "[" @120..121
[55] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 2 } "32" @121..123
[56] CloseBracket "]" @123..124
[57] Comma "," @124..125
[58] Whitespace " " @125..126
[59] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "4" @126..127
[60] Comma "," @127..128
[61] Whitespace " " @128..129
[62] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "3" @129..130
[63] Comma "," @130..131
[64] Whitespace " " @131..132
[65] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @132..133
[66] CloseBracket "]" @133..134
[67] Whitespace " " @134..135
[68] Ident "x" @135..136
[69] Semi ";" @136..137
[70] Whitespace "\n" @137..138
[71] Ident "array" @138..143
[72] OpenBracket "[" @143..144
[73] Ident "bit" @144..147
[74] OpenBracket "[" @147..148
[75] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "8" @148..149
[76] CloseBracket "]" @149..150
[77] Comma "," @150..151
[78] Whitespace " " @151..152
[79] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @152..153
[80] CloseBracket "]" @153..154
[81] Whitespace " " @154..155
[82] Ident "x" @155..156
[83] Semi ";" @156..157
[84] Whitespace "\n" @157..158
[85] Ident "array" @158..163
[86] OpenBracket "[" @163..164
[87] Ident "bit" @164..167
[88] OpenBracket "[" @167..168
[89] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 2 } "16" @168..170
[90] CloseBracket "]" @170..171
[91] Comma "," @171..172
[92] Whitespace " " @172..173
[93] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @173..174
[94] Comma "," @174..175
[95] Whitespace " " @175..176
[96] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @176..177
[97] CloseBracket "]" @177..178
[98] Whitespace " " @178..179
[99] Ident "x" @179..180
[100] Semi ";" @180..181
[101] Whitespace "\n" @181..182
[102] Ident "array" @182..187
[103] OpenBracket "[" @187..188
[104] Ident "complex" @188..195
[105] OpenBracket "[" @195..196
[106] Ident "float" @196..201
[107] OpenBracket "[" @201..202
[108] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 2 } "32" @202..204
[109] CloseBracket "]" @204..205
[110] CloseBracket "]" @205..206
[111] Comma "," @206..207
[112] Whitespace " " @207..208
[113] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "4" @208..209
[114] CloseBracket "]" @209..210
[115] Whitespace " " @210..211
[116] Ident "x" @211..212
[117] Semi ";" @212..213
[118] Whitespace "\n" @213..214
[119] Ident "array" @214..219
[120] OpenBracket "[" @219..220
[121] Ident "bool" @220..224
[122] Comma "," @224..225
[123] Whitespace " " @225..226
[124] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "3" @226..227
[125] CloseBracket "]" @227..228
[126] Whitespace " " @228..229
[127] Ident "x" @229..230
[128] Semi ";" @230..231
[129] Whitespace "\n" @231..232
[130] Ident "array" @232..237
[131] OpenBracket "[" @237..238
[132] Ident "int" @238..241
[133] OpenBracket "[" @241..242
[134] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "8" @242..243
[135] CloseBracket "]" @243..244
[136] Comma "," @244..245
[137] Whitespace " " @245..246
[138] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "4" @246..247
[139] CloseBracket "]" @247..248
[140] Whitespace " " @248..249
[141] Ident "x" @249..250
[142] Whitespace " " @250..251
[143] Eq "=" @251..252
[144] Whitespace " " @252..253
[145] OpenBrace "{" @253..254
[146] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "1" @254..255
[147] Comma "," @255..256
[148] Whitespace " " @256..257
[149] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @257..258
[150] Comma "," @258..259
[151] Whitespace " " @259..260
[152] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "3" @260..261
[153] Comma "," @261..262
[154] Whitespace " " @262..263
[155] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "4" @263..264
[156] CloseBrace "}" @264..265
[157] Semi ";" @265..266
[158] Whitespace "\n" @266..267
[159] Ident "array" @267..272
[160] OpenBracket "[" @272..273
[161] Ident "int" @273..276
[162] OpenBracket "[" @276..277
[163] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "8" @277..278
[164] CloseBracket "]" @278..279
[165] Comma "," @279..280
[166] Whitespace " " @280..281
[167] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "4" @281..282
[168] CloseBracket "]" @282..283
[169] Whitespace " " @283..284
[170] Ident "x" @284..285
[171] Whitespace " " @285..286
[172] Eq "=" @286..287
[173] Whitespace " " @287..288
[174] Ident "y" @288..289
[175] Semi ";" @289..290
[176] Whitespace "\n" @290..291
[177] Ident "array" @291..296
[178] OpenBracket "[" @296..297
[179] Ident "int" @297..300
[180] OpenBracket "[" @300..301
[181] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "8" @301..302
[182] CloseBracket "]" @302..303
[183] Comma "," @303..304
[184] Whitespace " " @304..305
[185] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @305..306
[186] CloseBracket "]" @306..307
[187] Whitespace " " @307..308
[188] Ident "x" @308..309
[189] Whitespace " " @309..310
[190] Eq "=" @310..311
[191] Whitespace " " @311..312
[192] OpenBrace "{" @312..313
[193] Ident "y" @313..314
[194] Comma "," @314..315
[195] Whitespace " " @315..316
[196] Ident "y" @316..317
[197] Plus "+" @317..318
[198] Ident "y" @318..319
[199] CloseBrace "}" @319..320
[200] Semi ";" @320..321
[201] Whitespace "\n" @321..322
[202] Ident "array" @322..327
[203] OpenBracket "[" @327..328
[204] Ident "uint" @328..332
[205] OpenBracket "[" @332..333
[206] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 2 } "32" @333..335
[207] CloseBracket "]" @335..336
[208] Comma "," @336..337
[209] Whitespace " " @337..338
[210] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @338..339
[211] Comma "," @339..340
[212] Whitespace " " @340..341
[213] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @341..342
[214] CloseBracket "]" @342..343
[215] Whitespace " " @343..344
[216] Ident "x" @344..345
[217] Whitespace " " @345..346
[218] Eq "=" @346..347
[219] Whitespace " " @347..348
[220] OpenBrace "{" @348..349
[221] OpenBrace "{" @349..350
[222] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "3" @350..351
[223] Comma "," @351..352
[224] Whitespace " " @352..353
[225] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "4" @353..354
[226] CloseBrace "}" @354..355
[227] Comma "," @355..356
[228] Whitespace " " @356..357
[229] OpenBrace "{" @357..358
[230] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @358..359
[231] Minus "-" @359..360
[232] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "3" @360..361
[233] Comma "," @361..362
[234] Whitespace " " @362..363
[235] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "5" @363..364
[236] Star "*" @364..365
[237] Ident "y" @365..366
[238] CloseBrace "}" @366..367
[239] CloseBrace "}" @367..368
[240] Semi ";" @368..369
[241] Whitespace "\n" @369..370
[242] Ident "array" @370..375
[243] OpenBracket "[" @375..376
[244] Ident "uint" @376..380
[245] OpenBracket "[" @380..381
[246] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 2 } "32" @381..383
[247] CloseBracket "]" @383..384
[248] Comma "," @384..385
[249] Whitespace " " @385..386
[250] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @386..387
[251] Comma "," @387..388
[252] Whitespace " " @388..389
[253] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @389..390
[254] CloseBracket "]" @390..391
[255] Whitespace " " @391..392
[256] Ident "x" @392..393
[257] Whitespace " " @393..394
[258] Eq "=" @394..395
[259] Whitespace " " @395..396
[260] OpenBrace "{" @396..397
[261] Ident "z" @397..398
[262] Comma "," @398..399
[263] Whitespace " " @399..400
[264] OpenBrace "{" @400..401
[265] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @401..402
[266] Minus "-" @402..403
[267] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "3" @403..404
[268] Comma "," @404..405
[269] Whitespace " " @405..406
[270] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "5" @406..407
[271] Star "*" @407..408
[272] Ident "y" @408..409
[273] CloseBrace "}" @409..410
[274] CloseBrace "}" @410..411
[275] Semi ";" @411..412
[276] Whitespace "\n" @412..413
[277] Ident "array" @413..418
[278] OpenBracket "[" @418..419
[279] Ident "uint" @419..423
[280] OpenBracket "[" @423..424
[281] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 2 } "32" @424..426
[282] CloseBracket "]" @426..427
[283] Comma "," @427..428
[284] Whitespace " " @428..429
[285] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @429..430
[286] Comma "," @430..431
[287] Whitespace " " @431..432
[288] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @432..433
[289] CloseBracket "]" @433..434
[290] Whitespace " " @434..435
[291] Ident "x" @435..436
[292] Whitespace " " @436..437
[293] Eq "=" @437..438
[294] Whitespace " " @438..439
[295] OpenBrace "{" @439..440
[296] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @440..441
[297] Star "*" @441..442
[298] Ident "z" @442..443
[299] Comma "," @443..444
[300] Whitespace " " @444..445
[301] OpenBrace "{" @445..446
[302] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "1" @446..447
[303] Comma "," @447..448
[304] Whitespace " " @448..449
[305] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @449..450
[306] CloseBrace "}" @450..451
[307] CloseBrace "}" @451..452
[308] Semi ";" @452..453
[309] Whitespace "\n" @453..454
[310] Ident "array" @454..459
[311] OpenBracket "[" @459..460
[312] Ident "uint" @460..464
[313] OpenBracket "[" @464..465
[314] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 2 } "32" @465..467
[315] CloseBracket "]" @467..468
[316] Comma "," @468..469
[317] Whitespace " " @469..470
[318] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @470..471
[319] Comma "," @471..472
[320] Whitespace " " @472..473
[321] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @473..474
[322] CloseBracket "]" @474..475
[323] Whitespace " " @475..476
[324] Ident "x" @476..477
[325] Whitespace " " @477..478
[326] Eq "=" @478..479
[327] Whitespace " " @479..480
[328] Ident "y" @480..481
[329] Semi ";" @481..482
[330] Whitespace "\n" @482..483
