crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__declaration__array.qasm-parse.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: parse_snap
---
id: tests/snippets/reference/declaration/array.qasm
expect-parse: Todo
--- parser ---
ok: false
panicked: false
errors: 23
--- ast ---
SOURCE_FILE@0..483: // lex: ok
// parse: todo
// sema: todo

array[uint[16], 1] x;
array[int[8], 4] x;
array[float[64], 4, 2] x;
array[angle[32], 4, 3, 2] x;
array[bit[8], 2] x;
array[bit[16], 2, 2] x;
array[complex[float[32]], 4] x;
array[bool, 3] x;
array[int[8], 4] x = {1, 2, 3, 4};
array[int[8], 4] x = y;
array[int[8], 2] x = {y, y+y};
array[uint[32], 2, 2] x = {{3, 4}, {2-3, 5*y}};
array[uint[32], 2, 2] x = {z, {2-3, 5*y}};
array[uint[32], 2, 2] x = {2*z, {1, 2}};
array[uint[32], 2, 2] x = y;

CLASSICAL_DECLARATION_STATEMENT@41..62: array[uint[16], 1] x;
ARRAY_TYPE@41..59: array[uint[16], 1]
SCALAR_TYPE@47..55: uint[16]
DESIGNATOR@51..55: [16]
LITERAL@52..54: 16
LITERAL@57..58: 1
NAME@60..61: x
CLASSICAL_DECLARATION_STATEMENT@63..82: array[int[8], 4] x;
ARRAY_TYPE@63..79: array[int[8], 4]
SCALAR_TYPE@69..75: int[8]
DESIGNATOR@72..75: [8]
LITERAL@73..74: 8
LITERAL@77..78: 4
NAME@80..81: x
CLASSICAL_DECLARATION_STATEMENT@83..108: array[float[64], 4, 2] x;
ARRAY_TYPE@83..105: array[float[64], 4, 2]
SCALAR_TYPE@89..98: float[64]
DESIGNATOR@94..98: [64]
LITERAL@95..97: 64
LITERAL@100..101: 4
LITERAL@103..104: 2
NAME@106..107: x
CLASSICAL_DECLARATION_STATEMENT@109..137: array[angle[32], 4, 3, 2] x;
ARRAY_TYPE@109..134: array[angle[32], 4, 3, 2]
SCALAR_TYPE@115..124: angle[32]
DESIGNATOR@120..124: [32]
LITERAL@121..123: 32
LITERAL@126..127: 4
LITERAL@129..130: 3
LITERAL@132..133: 2
NAME@135..136: x
CLASSICAL_DECLARATION_STATEMENT@138..157: array[bit[8], 2] x;
ARRAY_TYPE@138..154: array[bit[8], 2]
SCALAR_TYPE@144..150: bit[8]
DESIGNATOR@147..150: [8]
LITERAL@148..149: 8
LITERAL@152..153: 2
NAME@155..156: x
CLASSICAL_DECLARATION_STATEMENT@158..181: array[bit[16], 2, 2] x;
ARRAY_TYPE@158..178: array[bit[16], 2, 2]
SCALAR_TYPE@164..171: bit[16]
DESIGNATOR@167..171: [16]
LITERAL@168..170: 16
LITERAL@173..174: 2
LITERAL@176..177: 2
NAME@179..180: x
CLASSICAL_DECLARATION_STATEMENT@182..213: array[complex[float[32]], 4] x;
ARRAY_TYPE@182..210: array[complex[float[32]], 4]
SCALAR_TYPE@188..206: complex[float[32]]
SCALAR_TYPE@196..205: float[32]
DESIGNATOR@201..205: [32]
LITERAL@202..204: 32
LITERAL@208..209: 4
NAME@211..212: x
CLASSICAL_DECLARATION_STATEMENT@214..231: array[bool, 3] x;
ARRAY_TYPE@214..228: array[bool, 3]
SCALAR_TYPE@220..224: bool
LITERAL@226..227: 3
NAME@229..230: x
CLASSICAL_DECLARATION_STATEMENT@232..266: array[int[8], 4] x = {1, 2, 3, 4};
ARRAY_TYPE@232..248: array[int[8], 4]
SCALAR_TYPE@238..244: int[8]
DESIGNATOR@241..244: [8]
LITERAL@242..243: 8
LITERAL@246..247: 4
NAME@249..250: x
BLOCK_EXPR@253..265: {1, 2, 3, 4}
EXPR_STMT@254..255: 1
LITERAL@254..255: 1
ERROR@255..256: ,
EXPR_STMT@257..258: 2
LITERAL@257..258: 2
ERROR@258..259: ,
EXPR_STMT@260..261: 3
LITERAL@260..261: 3
ERROR@261..262: ,
LITERAL@263..264: 4
CLASSICAL_DECLARATION_STATEMENT@267..290: array[int[8], 4] x = y;
ARRAY_TYPE@267..283: array[int[8], 4]
SCALAR_TYPE@273..279: int[8]
DESIGNATOR@276..279: [8]
LITERAL@277..278: 8
LITERAL@281..282: 4
NAME@284..285: x
IDENTIFIER@288..289: y
CLASSICAL_DECLARATION_STATEMENT@291..321: array[int[8], 2] x = {y, y+y};
ARRAY_TYPE@291..307: array[int[8], 2]
SCALAR_TYPE@297..303: int[8]
DESIGNATOR@300..303: [8]
LITERAL@301..302: 8
LITERAL@305..306: 2
NAME@308..309: x
BLOCK_EXPR@312..320: {y, y+y}
EXPR_STMT@313..314: y
IDENTIFIER@313..314: y
ERROR@314..315: ,
BIN_EXPR@316..319: y+y
IDENTIFIER@316..317: y
IDENTIFIER@318..319: y
CLASSICAL_DECLARATION_STATEMENT@322..369: array[uint[32], 2, 2] x = {{3, 4}, {2-3, 5*y}};
ARRAY_TYPE@322..343: array[uint[32], 2, 2]
SCALAR_TYPE@328..336: uint[32]
DESIGNATOR@332..336: [32]
LITERAL@333..335: 32
LITERAL@338..339: 2
LITERAL@341..342: 2
NAME@344..345: x
BLOCK_EXPR@348..368: {{3, 4}, {2-3, 5*y}}
EXPR_STMT@349..355: {3, 4}
BLOCK_EXPR@349..355: {3, 4}
EXPR_STMT@350..351: 3
LITERAL@350..351: 3
ERROR@351..352: ,
LITERAL@353..354: 4
ERROR@355..356: ,
BLOCK_EXPR@357..367: {2-3, 5*y}
EXPR_STMT@358..361: 2-3
BIN_EXPR@358..361: 2-3
LITERAL@358..359: 2
LITERAL@360..361: 3
ERROR@361..362: ,
BIN_EXPR@363..366: 5*y
LITERAL@363..364: 5
IDENTIFIER@365..366: y
CLASSICAL_DECLARATION_STATEMENT@370..412: array[uint[32], 2, 2] x = {z, {2-3, 5*y}};
ARRAY_TYPE@370..391: array[uint[32], 2, 2]
SCALAR_TYPE@376..384: uint[32]
DESIGNATOR@380..384: [32]
LITERAL@381..383: 32
LITERAL@386..387: 2
LITERAL@389..390: 2
NAME@392..393: x
BLOCK_EXPR@396..411: {z, {2-3, 5*y}}
EXPR_STMT@397..398: z
IDENTIFIER@397..398: z
ERROR@398..399: ,
BLOCK_EXPR@400..410: {2-3, 5*y}
EXPR_STMT@401..404: 2-3
BIN_EXPR@401..404: 2-3
LITERAL@401..402: 2
LITERAL@403..404: 3
ERROR@404..405: ,
BIN_EXPR@406..409: 5*y
LITERAL@406..407: 5
IDENTIFIER@408..409: y
CLASSICAL_DECLARATION_STATEMENT@413..453: array[uint[32], 2, 2] x = {2*z, {1, 2}};
ARRAY_TYPE@413..434: array[uint[32], 2, 2]
SCALAR_TYPE@419..427: uint[32]
DESIGNATOR@423..427: [32]
LITERAL@424..426: 32
LITERAL@429..430: 2
LITERAL@432..433: 2
NAME@435..436: x
BLOCK_EXPR@439..452: {2*z, {1, 2}}
EXPR_STMT@440..443: 2*z
BIN_EXPR@440..443: 2*z
LITERAL@440..441: 2
IDENTIFIER@442..443: z
ERROR@443..444: ,
BLOCK_EXPR@445..451: {1, 2}
EXPR_STMT@446..447: 1
LITERAL@446..447: 1
ERROR@447..448: ,
LITERAL@449..450: 2
CLASSICAL_DECLARATION_STATEMENT@454..482: array[uint[32], 2, 2] x = y;
ARRAY_TYPE@454..475: array[uint[32], 2, 2]
SCALAR_TYPE@460..468: uint[32]
DESIGNATOR@464..468: [32]
LITERAL@465..467: 32
LITERAL@470..471: 2
LITERAL@473..474: 2
NAME@476..477: x
IDENTIFIER@480..481: y
