crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__declaration__array.qasm-sema.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: sema_snap
---
id: tests/snippets/reference/declaration/array.qasm
expect-sema: Todo
--- sema ---
ok: false
panicked: false
errors: 1
--- asg ---
(no asg)
