crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__declaration__complex.qasm-parse.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: parse_snap
---
id: tests/snippets/reference/declaration/complex.qasm
expect-parse: Ok
--- parser ---
ok: true
panicked: false
errors: 0
--- ast ---
SOURCE_FILE@0..273: // lex: ok
// parse: ok
// sema: todo

// beware the tab character in f = 1 im below
  complex[float] a;
  complex[float] b = 4 - 5.5im;
  complex[float[64]] d = a + 3 im;
//  complex[float[32]] c = a ** b;
  complex[float] e = 1im;
  complex[float] f = 1	im;
  complex z;

CLASSICAL_DECLARATION_STATEMENT@87..104: complex[float] a;
SCALAR_TYPE@87..101: complex[float]
SCALAR_TYPE@95..100: float
NAME@102..103: a
CLASSICAL_DECLARATION_STATEMENT@107..136: complex[float] b = 4 - 5.5im;
SCALAR_TYPE@107..121: complex[float]
SCALAR_TYPE@115..120: float
NAME@122..123: b
BIN_EXPR@126..135: 4 - 5.5im
LITERAL@126..127: 4
TIMING_LITERAL@130..135: 5.5im
LITERAL@130..133: 5.5
IDENTIFIER@133..135: im
CLASSICAL_DECLARATION_STATEMENT@139..171: complex[float[64]] d = a + 3 im;
SCALAR_TYPE@139..157: complex[float[64]]
SCALAR_TYPE@147..156: float[64]
DESIGNATOR@152..156: [64]
LITERAL@153..155: 64
NAME@158..159: d
BIN_EXPR@162..170: a + 3 im
IDENTIFIER@162..163: a
TIMING_LITERAL@166..170: 3 im
LITERAL@166..167: 3
IDENTIFIER@168..170: im
CLASSICAL_DECLARATION_STATEMENT@209..232: complex[float] e = 1im;
SCALAR_TYPE@209..223: complex[float]
SCALAR_TYPE@217..222: float
NAME@224..225: e
TIMING_LITERAL@228..231: 1im
LITERAL@228..229: 1
IDENTIFIER@229..231: im
CLASSICAL_DECLARATION_STATEMENT@235..259: complex[float] f = 1	im;
SCALAR_TYPE@235..249: complex[float]
SCALAR_TYPE@243..248: float
NAME@250..251: f
TIMING_LITERAL@254..258: 1	im
LITERAL@254..255: 1
IDENTIFIER@256..258: im
CLASSICAL_DECLARATION_STATEMENT@262..272: complex z;
SCALAR_TYPE@262..269: complex
NAME@270..271: z
