crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__declaration__complex2.qasm-parse.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: parse_snap
---
id: tests/snippets/reference/declaration/complex2.qasm
expect-parse: Ok
--- parser ---
ok: true
panicked: false
errors: 0
--- ast ---
SOURCE_FILE@0..70: // lex: ok
// parse: ok
// sema: todo

complex[float[32]] c = a ** b;

CLASSICAL_DECLARATION_STATEMENT@39..69: complex[float[32]] c = a ** b;
SCALAR_TYPE@39..57: complex[float[32]]
SCALAR_TYPE@47..56: float[32]
DESIGNATOR@52..56: [32]
LITERAL@53..55: 32
NAME@58..59: c
BIN_EXPR@62..68: a ** b
IDENTIFIER@62..63: a
IDENTIFIER@67..68: b
